# prog3_unit2_templates_task_2_v2025_01_template

./: CMakeLists.txt  README.md  run.sh
autograder/: CMakeLists.txt  config.yml
autograder/tests/cppcheck/: cppcheck.cpp  run_test  test.yml
autograder/tests/question_1/test_1/: test.yml  test_1.cpp
autograder/tests/question_1/test_2/: test.yml  test_2.cpp
autograder/tests/question_1/test_3/: test.yml  test_3.cpp
autograder/tests/question_1/test_4/: run_test  test.yml  test_4.cpp
autograder/tests/question_10/test_1/: question_10_test_1.in  test.yml  test_1.cpp
autograder/tests/question_10/test_2/: test.yml  test_2.cpp
autograder/tests/question_10/test_3/: question_10_test_3.in  test.yml  test_3.cpp
autograder/tests/question_10/test_4/: question_10_test_4.in  run_test  test.yml  test_4.cpp
autograder/tests/question_2/test_1/: test.yml  test_1.cpp
autograder/tests/question_2/test_2/: test.yml  test_2.cpp
autograder/tests/question_2/test_3/: test.yml  test_3.cpp
autograder/tests/question_2/test_4/: test.yml  test_4.cpp
autograder/tests/question_3/test_1/: test.yml  test_1.cpp
autograder/tests/question_3/test_2/: test.yml  test_2.cpp
autograder/tests/question_3/test_3/: test.yml  test_3.cpp
autograder/tests/question_3/test_4/: test.yml  test_4.cpp
autograder/tests/question_4/test_1/: question_4_test_1.in  test.yml  test_1.cpp
autograder/tests/question_4/test_2/: question_4_test_2.in  test.yml  test_2.cpp
autograder/tests/question_4/test_3/: question_4_test_3.in  run_test  test.yml  test_3.cpp
src/: all_true.h  apply_to_all.h  (+9 more)
(+56 files in other folders)
